# ggh

./: .dockerignore  .gitignore  .licenserc.yaml  Dockerfile  Makefile  README.md  SECURITY.md  dune-project  flake.nix  ggh.opam
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
dune.lock/: cmdliner.pkg  dolog.6.0.0.pkg  dolog.pkg  dune-build-info.pkg  lock.dune  ocaml-version.4.1.0.pkg  ocamlformat-lib.0.29.0.pkg  ocamlformat.0.29.0.pkg
hooks/: ggh-conventional-commit  ggh-conventional-commit.sh  ggh-gitleaks  ggh-gitleaks.sh  ggh-signed-off  ggh-signed-off.sh
lib/: config.ml  config.mli  dune  git.ml  hooks.ml  trusted.ml  tty.ml  utils.ml
test/: config.ml  dune  git.ml  git_mock.ml
